--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,7 @@ hr {
   border-radius: 5px;
   padding: 20px;
   cursor: pointer;
+  position: relative;
 }
 
 .grid-item:hover {
@@ -209,12 +210,16 @@ hr {
   border-top: solid 5px hsl(203, 89%, 53%);
 }
 
-.grid-item-3 {
-  border-style: solid;
-  border-width: 5px;
-  border-image: linear-gradient(90deg, hsl(37, 97%, 70%), hsl(329, 70%, 58%))
-                100% 0 0 0/5px 0 0 0;
-                
+.grid-item-3:before {
+  content: "";
+  width: 100%;
+  height: 5px;
+  background: linear-gradient(90deg, hsl(37, 97%, 70%), hsl(329, 70%, 58%));
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
 }
 
 .grid-item-4 {
