--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,10 @@ hr {
   border-top: solid 5px hsl(203, 89%, 53%);
 }
 
+.grid-item-3 {
+  border-bottom: solid 5px transparent;
+}
+
 .grid-item-3:before {
   content: "";
   width: 100%;
